tests/fixtures/invalid/str_mod_set.py
# Cannot modulo Str and Set[int]
x: str = "hello" % {1, 2, 3}
